--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Qi Le"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. Student, CSE@UMN, Efficient & Distributed ML Researcher"
+  bio              : "Ph.D. Student, CSE@UMN"
   location         : "Minneapolis, Minnesota"
   # employer         : "Red Brick University"
   uri              : # URL
