--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Qi Le's Personal Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"Sitemap
+name                     : &name "Your Name"
 description              : &description "personal description"
 url                      : https://qi-le1.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
